--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo a string
-        run: echo "Oussama Bensaid"
+        run: echco "Oussama Bensaid"
       
       - name: mutiline script
         run: |
