--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -13,3 +13,7 @@ jobs:
         run: |
           node -v
           npm -v
+      - name: Python Command
+        run: |
+          import platform
+          print(platform.processor)
