--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,8 +8,8 @@ jobs:
     steps:
       - name: Simple JS Action
         id: greet
-        used: actions/hello-world-javascript-action@v1.1
+        uses: actions/hello-world-javascript-action@v1.1
         with: 
           who-to-great: Oussama
       - name: Log Greeting Time
-        run: echo "${{steps.greet.outputs.time}}"
+        run: echo "${{ steps.greet.outputs.time }}"
