--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,6 @@
 name: Actions Workflow
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   run-github-actions:
@@ -27,7 +27,7 @@ jobs:
         id: greet
         uses: actions/hello-world-javascript-action@v1.1
         with: 
-          who-to-greet: Oussama
+          who-to-greet: Bensaid
 
       - name: Log Greeting Time
         run: echo "${{ steps.greet.outputs.time }}"
